--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -19,6 +19,7 @@ allow 100.42.29.170;
 allow 100.42.29.171;
 allow 100.42.29.172;
 allow 100.42.29.173;
+allow 100.42.29.174;
 allow 102.130.113.9;
 allow 102.130.117.167;
 allow 102.130.127.117;
@@ -1257,6 +1258,7 @@ allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
+allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:119:3f0b::1;
@@ -1481,7 +1483,6 @@ allow 2a0e:97c0:3e3:460:1337:b20b:1337:9;
 allow 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 allow 2a0e:97c0:3e3:a0e::1;
 allow 2a0e:97c0:3ea:882::1;
-allow 2a0e:97c0:470::28;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
@@ -1751,6 +1752,7 @@ allow 5.196.95.34;
 allow 5.253.247.27;
 allow 5.255.100.219;
 allow 5.255.101.10;
+allow 5.255.101.131;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.110.120;
@@ -1886,13 +1888,13 @@ allow 91.219.236.101;
 allow 91.219.236.91;
 allow 91.92.109.126;
 allow 91.92.109.43;
+allow 92.113.144.149;
 allow 92.243.24.163;
 allow 92.246.84.133;
 allow 93.113.25.239;
 allow 93.123.109.116;
 allow 93.123.12.112;
 allow 93.185.165.211;
-allow 93.90.74.28;
 allow 93.90.74.29;
 allow 93.95.227.37;
 allow 93.95.228.125;
