--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -157,6 +157,7 @@ allow 139.99.172.11;
 allow 139.99.8.57;
 allow 142.44.133.81;
 allow 144.126.133.74;
+allow 144.208.79.169;
 allow 146.59.126.232;
 allow 146.59.231.4;
 allow 147.45.116.145;
@@ -223,10 +224,10 @@ allow 176.65.148.133;
 allow 176.65.148.3;
 allow 176.65.149.100;
 allow 176.65.149.84;
+allow 176.65.149.87;
 allow 176.65.149.88;
 allow 176.65.149.96;
 allow 176.97.114.202;
-allow 177.149.152.224;
 allow 177.153.51.238;
 allow 177.93.140.66;
 allow 178.162.175.5;
@@ -457,6 +458,7 @@ allow 185.246.188.149;
 allow 185.246.188.73;
 allow 185.246.188.74;
 allow 185.246.189.99;
+allow 185.246.190.9;
 allow 185.246.84.179;
 allow 185.247.184.105;
 allow 185.247.184.33;
@@ -603,6 +605,7 @@ allow 195.47.238.91;
 allow 195.47.238.92;
 allow 195.47.238.93;
 allow 195.80.151.242;
+allow 195.88.74.206;
 allow 198.167.206.202;
 allow 198.251.84.163;
 allow 198.251.84.237;
@@ -729,7 +732,6 @@ allow 2001:67c:e60:c0c:192:42:116:216;
 allow 2001:67c:e60:c0c:192:42:116:217;
 allow 2001:67c:e60:c0c:192:42:116:218;
 allow 2001:67c:e60:c0c:192:42:116:219;
-allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:545c::b;
 allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
@@ -850,6 +852,7 @@ allow 205.185.121.177;
 allow 205.185.123.93;
 allow 205.185.124.176;
 allow 206.166.251.193;
+allow 209.114.126.207;
 allow 209.141.32.181;
 allow 209.141.32.198;
 allow 209.141.34.15;
@@ -1273,6 +1276,7 @@ allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
+allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
@@ -1487,6 +1491,7 @@ allow 2a0e:97c0:3e3:460:1337:b30b:1337:10;
 allow 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 allow 2a0e:97c0:3e3:a0e::1;
 allow 2a0e:97c0:3ea:882::1;
+allow 2a0e:97c0:470::28;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
@@ -1600,7 +1605,6 @@ allow 37.114.50.142;
 allow 37.114.50.18;
 allow 37.114.50.27;
 allow 37.114.63.5;
-allow 37.120.239.59;
 allow 37.187.5.192;
 allow 37.221.208.71;
 allow 37.228.129.128;
@@ -1896,12 +1900,14 @@ allow 91.219.236.101;
 allow 91.219.236.91;
 allow 91.92.109.126;
 allow 91.92.109.43;
+allow 92.113.144.149;
 allow 92.243.24.163;
 allow 92.246.84.133;
 allow 93.113.25.239;
 allow 93.123.109.116;
 allow 93.123.12.112;
 allow 93.185.165.211;
+allow 93.90.74.28;
 allow 93.90.74.29;
 allow 93.95.227.37;
 allow 93.95.228.125;
