--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -344,6 +344,7 @@ allow 2803:cd80:2000:10::db8f:5f60;
 allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
 allow 2a00:16b0:1:243::7012:e817;
+allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
@@ -447,7 +448,6 @@ allow 2a06:1700:2:148::8493:bcd8;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
-allow 2a06:3000::10;
 allow 2a06:3000::30;
 allow 2a06:3000::40;
 allow 2a06:d380:0:103::62;
@@ -640,6 +640,7 @@ allow 2a0e:97c0:3e3:460:1337:b00b:1337:1;
 allow 2a0e:97c0:3e3:460:1337:b01b:1337:2;
 allow 2a0e:97c0:3e3:460:1337:b02b:1337:3;
 allow 2a0e:97c0:3e3:460:1337:b03b:1337:4;
+allow 2a0e:97c0:3e3:460:1337:b04b:1337:5;
 allow 2a0e:97c0:3e3:460:1337:b05b:1337:6;
 allow 2a0e:97c0:3e3:460:1337:b10b:1337:8;
 allow 2a0e:97c0:3e3:460:1337:b20b:1337:9;
