--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -458,7 +458,6 @@ allow 185.246.188.149;
 allow 185.246.188.73;
 allow 185.246.188.74;
 allow 185.246.189.99;
-allow 185.246.190.9;
 allow 185.246.84.179;
 allow 185.247.184.105;
 allow 185.247.184.33;
@@ -1291,6 +1290,7 @@ allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
+allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
@@ -1825,7 +1825,6 @@ allow 57.128.220.107;
 allow 57.129.91.235;
 allow 5.79.66.19;
 allow 5.8.18.30;
-allow 5.8.18.46;
 allow 5.8.18.99;
 allow 62.171.137.169;
 allow 62.182.84.146;
@@ -1873,6 +1872,7 @@ allow 83.147.17.190;
 allow 83.217.9.73;
 allow 83.228.94.69;
 allow 83.96.213.63;
+allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.211.226.13;
