--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -458,7 +458,6 @@ deny 185.246.188.149;
 deny 185.246.188.73;
 deny 185.246.188.74;
 deny 185.246.189.99;
-deny 185.246.190.9;
 deny 185.246.84.179;
 deny 185.247.184.105;
 deny 185.247.184.33;
@@ -1291,6 +1290,7 @@ deny 2a04:52c0:123:c6c3::1;
 deny 2a04:52c0:126:3ab8::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:130:896e::1;
+deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
@@ -1825,7 +1825,6 @@ deny 57.128.220.107;
 deny 57.129.91.235;
 deny 5.79.66.19;
 deny 5.8.18.30;
-deny 5.8.18.46;
 deny 5.8.18.99;
 deny 62.171.137.169;
 deny 62.182.84.146;
@@ -1873,6 +1872,7 @@ deny 83.147.17.190;
 deny 83.217.9.73;
 deny 83.228.94.69;
 deny 83.96.213.63;
+deny 83.97.20.77;
 deny 84.16.224.227;
 deny 84.19.182.20;
 deny 84.211.226.13;
