--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -222,6 +222,7 @@ allow 176.118.193.33;
 allow 176.121.81.51;
 allow 176.58.100.98;
 allow 176.58.121.177;
+allow 176.58.89.182;
 allow 176.65.148.133;
 allow 176.65.148.3;
 allow 176.65.149.100;
@@ -989,6 +990,7 @@ allow 45.9.148.50;
 allow 45.9.156.101;
 allow 45.9.168.18;
 allow 45.9.168.192;
+allow 45.9.168.70;
 allow 45.94.31.68;
 allow 45.95.169.104;
 allow 45.95.169.109;
